<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">elFariDroid</string>
    <string name="ef">el Fari</string>
    <string name="powered_by">\@powered by</string>
    <string name="action_settings">Settings</string>
    <string name="volume_label">Volume:</string>
    <string name="volume_value">0</string>
    <string name="volume_button">Apply</string>
    <string name="message_label">Message:</string>
    <string name="message_hint">Type your Fari message here and press Send</string>
    <string name="message_button">Send</string>
    <string name="error_missing_settings">Complete passphrase and nickname first!</string>
    <string name="error_wrong_passphrase">ERROR: Wrong passphrase. Sorry.</string>
    <string name="error_generic">ERROR: Something went wrong. Review your settings.</string>
    <string name="error_api_communication">ERROR: Can\'t contact elFariDroid API</string>
    <string name="error_empty_message">Type a message first!</string>
    <string name="info_message_processed">Message has been processed</string>
    <string name="elfaridroidversion">Version: 0.2</string>

</resources>